# validity-aware-memory

./: .gitignore  README.md  pyproject.toml
results/: ablation_deterministic.json  synthetic_deterministic_manifest.json  synthetic_fixed_manifest.json  synthetic_local_hf_tiny_cpu_manifest.json
scripts/: run_mem0_ablation_experiments.sh  run_mem0_ablation_locomo.sh  run_mem0_ablation_longmemeval.sh  run_paper_experiments.sh  run_recovery_locomo.sh  run_recovery_longmemeval.sh
src/memory_inference/: __init__.py  agent.py  cli.py  experiment_registry.py  metrics.py  open_ended_eval.py  reporting.py  results.py  run_experiment.py  types.py
src/memory_inference/annotation/: fact_extractor.py  query_intent.py
src/memory_inference/benchmarks/: conversational_facts.py  hard_synthetic.py  locomo_adapter.py  locomo_preprocess.py  (+6 more)
tests/: test_benchmark_consolidator.py  test_confusable_reasoner.py  test_consolidation_types.py  test_consolidator_v2.py  test_conversational_facts.py  test_dense_baselines.py  test_hard_synthetic_benchmark.py  test_local_model_stack.py  test_locomo_raw.py  test_longmemeval_raw.py  test_mem0_validity_guard.py  test_memory_entry_v2.py  test_metrics.py  test_mock_consolidator.py  test_odv2_hybrid.py  test_odv2_mem0_hybrid_policy.py  test_offline_delta_policy.py  test_offline_delta_v2.py  test_open_ended_eval.py  test_orchestration_presets.py  test_plan_v2_implementation.py  test_revised_experiment_stack.py  test_revision_synthetic.py  test_revision_types.py  test_semantic_utils.py  test_state_oracle.py  test_types.py  test_types_extensions.py
(+38 files in other folders)
